--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@tanstack/vue-table": "^8.16.0",
     "@tauri-apps/api": ">=2.0.0-beta.0",
     "@tauri-apps/plugin-shell": ">=2.0.0-beta.0",
+    "@vueuse/core": "^10.9.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.373.0",
@@ -22,6 +24,8 @@
     "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@iconify-json/radix-icons": "^1.1.14",
+    "@iconify/vue": "^4.1.2",
     "@tauri-apps/cli": ">=2.0.0-beta.0",
     "@types/node": "^20.12.7",
     "@vitejs/plugin-vue": "^5.0.4",
