--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "vue": "^3.3.4",
-    "vue-chartjs": "^5.3.1"
+    "vue-chartjs": "^5.3.1",
+    "vue-i18n": "^9.13.1"
   },
   "devDependencies": {
     "@iconify-json/radix-icons": "^1.1.14",
