--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "radix-vue": "^1.7.2",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "vaul-vue": "^0.1.2",
     "vue": "^3.3.4",
     "vue-chartjs": "^5.3.1",
     "vue-i18n": "^9.13.1"
