--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tanstack/vue-table": "^8.16.0",
     "@tauri-apps/api": ">=2.0.0-beta.0",
+    "@tauri-apps/plugin-fs": "^2.2.0",
     "@tauri-apps/plugin-shell": ">=2.0.0-beta.0",
     "@vueuse/core": "^10.9.0",
     "chart.js": "^4.4.2",
@@ -22,6 +23,7 @@
     "radix-vue": "^1.7.2",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "tauri-plugin-pinia": "^1.1.1",
     "vaul-vue": "^0.1.2",
     "vue": "^3.3.4",
     "vue-chartjs": "^5.3.1",
@@ -38,6 +40,6 @@
     "tailwindcss": "^3.4.3",
     "typescript": "^5.0.2",
     "vite": "^5.0.0",
-    "vue-tsc": "^1.8.5"
+    "vue-tsc": "^2.2.0"
   }
 }
