--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tauri-apps/api": ">=2.0.0-beta.0",
     "@tauri-apps/plugin-fs": "^2.2.0",
     "@tauri-apps/plugin-shell": ">=2.0.0-beta.0",
+    "@tomjs/vite-plugin-iconify": "^1.2.1",
     "@vueuse/core": "^10.9.0",
     "chart.js": "^4.4.2",
     "class-variance-authority": "^0.7.0",
