--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -12,12 +12,13 @@ name = "achensticum_lib"
 crate-type = ["lib", "cdylib", "staticlib"]
 
 [build-dependencies]
-tauri-build = { version = "2.0.0-beta", features = [] }
+tauri-build = { version = "2", features = [] }
 
 [dependencies]
-tauri = { version = "2.2.5", features = [] }
+tauri = { version = "2", features = ["protocol-asset"] }
 tauri-plugin-shell = "2.2.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-tauri-plugin-pinia = "1.1.1"
+tauri-plugin-pinia = "1.1.2"
+tauri-plugin-store = "2"
 tauri-plugin-fs = "2"
